--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,6 +2,8 @@ body{
   position: fixed;
 }
 .flex-container {
+    position: fixed;
+    z-index: 2;
     direction: ltr;
     flex-flow: row;
     display: flex;
