--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -22,8 +22,10 @@
 }
 
 .bubble-text {
+  algin: center;
   margin-top: 20px;
   max-width: 250px;
+  margin-left:  -90px;
   height: 105px;
   text-align: left;
   word-wrap: break-word;
