--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -123,7 +123,7 @@
       <div *ngIf=visibleArray[4] class="dropdown-content" id="dropdown-school">
         <section class="dropdown-first">
           <img [src]="'../../..'+headerdaten?.school?.imageUrlBig" class="dropdown-first-icon" />
-          <p class="dropdown-first-headline" >
+          <p id="schoolname" class="dropdown-first-headline" >
             {{headerdaten?.school?.name}}
           </p>
           <section class="dropdown-first-smalltext">
