--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -104,9 +104,9 @@
           <p class="dropdown-first-headline">
             {{headerdaten["forename"]}}<br>{{headerdaten["surname"]}}
           </p>
-          <section class="dropdown-first-smalltext">
+          <div class="dropdown-first-smalltext" id="birth">
             {{headerdaten["birth"]}}
-          </section>
+          </div>
       </section>
       <a routerLink="/change-avatar">MEIN PROFILBILD ÄNDERN</a>
       <a routerLink="/change-password">MEIN PASSWORT ÄNDERN</a>
