--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -97,8 +97,10 @@ body{
     display: block !important;
 }
 .dropdown-scroll{
+
+
   max-height: calc(100% - 115px);
-  overflow: auto;
+  overflow: scroll;
   margin-right: -20px;
 }
 
