--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -25,6 +25,7 @@
 .bubble-text {
   algin: center;
   margin-top: 20px;
+  padding-top: 1px;
   max-width: 250px;
   margin-left:  -90px;
   height: 105px;
@@ -118,14 +119,14 @@
   display: -webkit-flex;
   flex-flow: column;
   margin-top: 44px;
+  margin-right: auto;
   margin-left: auto;
-  margin-right: 0px;
 }
 
 #illustrationLeft {
   display: -webkit-flex;
   flex-flow: column;
-  margin-left: 0px;
+  margin-left: auto;
   margin-right: auto;
 }
 
