--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -97,8 +97,9 @@ body{
     display: block !important;
 }
 .dropdown-scroll{
-  max-height: calc(100% - 115px);
+  max-height: 450px;
   overflow-y: scroll;
+  margin-right: -20px;
 }
 
 .dropdown-first {
