delete profile & change pw Abbrechen Button geadded

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -23,8 +23,16 @@
       <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG</td>
       <td align="center" width="300">  <input id='newPW2' type="password" name="newPW1" class="field"/> </td>
     </tr>
-  </table>
-    <div class="fields-middle2">
-      <button type="submit" class="check-night-button2" (click)="checkPassword()">ÄNDERN</button>
+</table>
+    <div align="center" class="buttons" lass="fields-middle" >
+      <table border = "0">
+      <tr >
+        <th><button routerLink='/index' class="button cancel">ABBRECHEN</button>
+        </th>
+        <th><button type="submit" class="check-night-button2" (click)="checkPassword()">ÄNDERN</button>
+        </th>
+      </tr>
+      </table>
     </div>
+
 </div>
