--- a/src/app/delete-profile/delete-profile.component.html
+++ b/src/app/delete-profile/delete-profile.component.html
@@ -13,8 +13,15 @@
         <td  width="500" rowspan="3"> Platzhalter für bubble </td>
       </tr>
     </table>
-    <div class="fields-middle2">
-      <button type="submit" class="check-night-button2" (click)="deleteAccount()">LÖSCHEN</button>
+    <div align="center" class="buttons" lass="fields-middle" >
+      <table border = "0">
+      <tr >
+        <th><button routerLink='/index' class="button cancel">ABBRECHEN</button>
+        </th>
+        <th><button type="submit" class="check-night-button2" (click)="deleteAccount()">LÖSCHEN</button>
+        </th>
+      </tr>
+      </table>
     </div>
   </div>
 </div>
