--- a/src/app/delete-profile/delete-profile.component.css
+++ b/src/app/delete-profile/delete-profile.component.css
@@ -93,6 +93,28 @@ p {
   cursor: pointer;
 }
 
+.save{
+  border: 2px solid #001a3a;
+  background-color: #001a3a;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+.cancel{
+  border: 2px solid #8da6d6;
+  background-color: #8da6d6;
+  color: #4565ad;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.button{
+  height: 40px;
+  width: 150px;
+  display: flex;
+  border-radius: 5px;
+  margin: 2px;
+}
 .center-logo{
   display: block;
   margin-left: auto;
