--- a/src/app/change-avatar/change-avatar.component.html
+++ b/src/app/change-avatar/change-avatar.component.html
@@ -37,3 +37,6 @@
   </table>
 </div>
 </div>
+<app-pop-up-advice [(visible)]="popUpService.warning.show"></app-pop-up-advice>
+<app-pop-up-confirmation [(visible)]="popUpService.confirmation.show"></app-pop-up-confirmation>
+<app-pop-up-warning [(visible)]="popUpService.advice.show"></app-pop-up-warning>
