--- a/src/app/pop-up-advice/pop-up-advice.component.css
+++ b/src/app/pop-up-advice/pop-up-advice.component.css
@@ -19,6 +19,9 @@
   top: 5px;
   right: -5px;
   background: url(../../images/delete.png) no-repeat;
+  height:30px;
+  width:30px;
+  margin-right: 10px;
 }
 
 .displayed {
