--- a/src/app/pop-up-advice/pop-up-advice.component.html
+++ b/src/app/pop-up-advice/pop-up-advice.component.html
@@ -6,6 +6,6 @@
   <p id="dialogText">{{popUpService.advice.text}}</p>
 
 
-  <button *ngIf="closable" (click)="popUpService.resetGear()" aria-label="Close" class="dialog_close-btn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+  <button *ngIf="closable" (click)="popUpService.resetAdvice()" aria-label="Close" class="dialog_close-btn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
 </div>
 <div *ngIf="visible" class="overlay"></div>
