--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -9,19 +9,25 @@
   <table border="0" width="100%">
     <tr>
       <td align="right" width="500" class="fontPassword">AKTUELLES PASSWORT</td>
-      <td align="center" width="300">  <input id='oldPW' type="password" name="oldPW" class="field"/> </td>
-      <td  width="500" rowspan="3"> platzhalter für bubble </td>
+      <td align="center" width="300">  <input id="oldPW" type="password" name="oldPW" class="field"/> </td>
+      <td  width="500" rowspan="3">
+        <div class="securityText left-arrow">Aus Sicherheitsgründen muss das Passwort
+            mindestens 7-stellig sein sowie einen Großbuchstaben,
+            eine Ziffer und ein Sonderzeichen
+            enthalten.
+        </div>
+      </td>
     </tr>
     <tr>
       <td align="right" width="500" class="fontPassword">NEUES PASSWORT</td>
-      <td align="center" width="300">  <input id='newPW1' [(ngModel)]="password"
+      <td align="center" width="300">  <input id="newPW1" [(ngModel)]="password"
         class="field" #pwField="ngModel" name="ngModel" type="password"
         pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}"/>
       </td>
     </tr>
     <tr >
       <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG</td>
-      <td align="center" width="300">  <input id='newPW2' type="password" name="newPW1" class="field"/> </td>
+      <td align="center" width="300">  <input id="newPW2" type="password" name="newPW1" class="field"/> </td>
     </tr>
 </table>
     <div align="center" class="buttons" lass="fields-middle" >
@@ -34,5 +40,7 @@
       </tr>
       </table>
     </div>
-
 </div>
+<app-pop-up-advice [(visible)]="popUpService.advice.show"></app-pop-up-advice>
+<app-pop-up-confirmation [(visible)]="popUpService.confirmation.show"></app-pop-up-confirmation>
+<app-pop-up-warning [(visible)]="popUpService.warning.show"></app-pop-up-warning>
