Pw Change Popup bedingungen anpassen

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -27,7 +27,7 @@
     </tr>
     <tr >
       <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG</td>
-      <td align="center" width="300">  <input id="newPW2" type="password" name="newPW1" class="field"/> </td>
+      <td align="center" width="300">  <input id="newPW2" type="password" name="newPW1" class="field" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}"/> </td>
     </tr>
 </table>
     <div align="center" class="buttons" lass="fields-middle" >
