--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -8,7 +8,7 @@
 <div>
   <table border="0" width="100%">
     <tr>
-      <td align="right" width="500" class="fontPassword">AKTUELLES PASSWORT</td>
+      <td align="right" width="500" class="fontPassword">AKTUELLES PASSWORT*</td>
       <td align="center" width="300">  <input id="oldPW" type="password" name="oldPW" class="field"/> </td>
       <td  width="500" rowspan="3">
         <div class="securityText left-arrow">Aus Sicherheitsgründen muss das Passwort
@@ -19,14 +19,14 @@
       </td>
     </tr>
     <tr>
-      <td align="right" width="500" class="fontPassword">NEUES PASSWORT</td>
+      <td align="right" width="500" class="fontPassword">NEUES PASSWORT*</td>
       <td align="center" width="300">  <input id="newPW1" [(ngModel)]="password"
         class="field" #pwField="ngModel" name="ngModel" type="password"
         pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}"/>
       </td>
     </tr>
     <tr >
-      <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG</td>
+      <td align="right" width="500" class="fontPassword" >PASSWORT BESTÄTIGUNG*</td>
       <td align="center" width="300">  <input id="newPW2" type="password" name="newPW1" class="field" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}"/> </td>
     </tr>
 </table>
