--- a/src/app/delete-profile/delete-profile.component.html
+++ b/src/app/delete-profile/delete-profile.component.html
@@ -8,7 +8,7 @@
   <div>
     <table border="0" width="100%">
       <tr>
-        <td align="right" width="500" class="fontPassword">PASSWORT</td>
+        <td align="right" width="500" class="fontPassword">PASSWORT*</td>
         <td align="center" width="300">  <input type="password" id="passwordField" class="field"/></td>
         <td  width="500" rowspan="3"></td>
       </tr>
