--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,14 +17,14 @@
   <div>
     <p class="text-description">CHECK! und CHECK! Lehrerzimmer sind Produkte des
       Raup&amp;Ritter Verlag und der OnWerk Softwareagentur Mannheim<br/>
-      <a href="http://www.raupundritter.com" target="_blank" id="link">www.raupundritter.com</a>
-      <a href="http://www.check-lehrerzimmer.com/contact/" target="_blank" id="link">Kontakt</a>
-      <a href="http://www.check-lehrerzimmer.com/impressum/" target="_blank" id="link">Impressum</a>
-      <a href="http://www.check-lehrerzimmer.com/preise/" target="_blank" id="link">Preise</a>
+      <a href="http://www.raupundritter.com" target="_blank" id="link">www.raupundritter.com</a> -
+      <a href="http://www.check-lehrerzimmer.com/contact/" target="_blank" id="link">Kontakt</a> -
+      <a href="http://www.check-lehrerzimmer.com/impressum/" target="_blank" id="link">Impressum</a> -
+      <a href="http://www.check-lehrerzimmer.com/preise/" target="_blank" id="link">Preise</a> -
       <a href="http://www.check-lehrerzimmer.com/hilfe/erste-schritte/" target="_blank" id="link">Hilfe</a>
-
-
-
     </p>
-  </div>
+    </div>
 </div>
+<app-pop-up-advice [(visible)]="popUpService.advice.show"></app-pop-up-advice>
+<app-pop-up-confirmation [(visible)]="popUpService.confirmation.show"></app-pop-up-confirmation>
+<app-pop-up-warning [(visible)]="popUpService.warning.show"></app-pop-up-warning>
