Schrift angepasst, regex vorerst verworfen

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,3 +1,5 @@
+
+
 .field{
   height: 40px;
   border-radius: 5px;
@@ -178,3 +180,10 @@
 .ch16:hover{
   background-color: #658bc8 !important;
 }
+
+
+
+@font-face { font-family: "roboto-thin"; src: url(ttf/Roboto-Thin.ttf)}
+@font-face { font-family: "widolte_regular"; src: url(ttf/Widolte_Regular.otf)}
+@font-face { font-family: "letteromatic"; src: url(ttf/ltromatic.ttf);}
+@font-face { font-family: "dr-hh-el"; src: url(ttf/dr-hh-el.ttf);}
