--- a/src/app/change-avatar/change-avatar.component.css
+++ b/src/app/change-avatar/change-avatar.component.css
@@ -1,5 +1,6 @@
 .buttons{
 display: block;
+font-family: Lato-Black;
 }
 .button{
   height: 40px;
@@ -12,6 +13,8 @@ display: block;
   width: 800px;
 }
 .cancel{
+  font-size: 13pt;
+  font-family: Lato-Black;
   border: 2px solid #8da6d6;
   background-color: #8da6d6;
   color: #4565ad;
@@ -20,6 +23,8 @@ display: block;
 
 }
 .save{
+  font-size: 13pt;
+  font-family: Lato-Black;
   border: 2px solid #001a3a;
   background-color: #001a3a;
   color: white;
