--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -111,7 +111,7 @@
   width: 150px;
   margin-left: auto;
   margin-right: auto;
-  font-family: Widolte_Regular;
+  font-family: Lato-Black;
   text-decoration: none;
   font-size: 13pt;
   border: 2px solid #001a3a;
@@ -121,6 +121,8 @@
   cursor: pointer;
 }
 .save{
+  font-size: 13pt;
+  font-family: Lato-Black;
   border: 2px solid #001a3a;
   background-color: #001a3a;
   color: white;
@@ -128,6 +130,8 @@
   margin-right: auto;
 }
 .cancel{
+  font-size: 13pt;
+  font-family: Lato-Black;
   border: 2px solid #8da6d6;
   background-color: #8da6d6;
   color: #4565ad;
