--- a/src/app/delete-profile/delete-profile.component.css
+++ b/src/app/delete-profile/delete-profile.component.css
@@ -83,7 +83,7 @@ p {
   width: 150px;
   margin-left: auto;
   margin-right: auto;
-  font-family: Widolte_Regular;
+ font-family: Lato-Black;
   text-decoration: none;
   font-size: 13pt;
   border: 2px solid #001a3a;
@@ -94,6 +94,8 @@ p {
 }
 
 .save{
+  font-size: 13pt;
+   font-family: Lato-Black;
   border: 2px solid #001a3a;
   background-color: #001a3a;
   color: white;
@@ -101,6 +103,8 @@ p {
   margin-right: auto;
 }
 .cancel{
+  font-size: 13pt;
+   font-family: Lato-Black;
   border: 2px solid #8da6d6;
   background-color: #8da6d6;
   color: #4565ad;
