--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -79,6 +79,7 @@ body{
 }
 .dropdown-content a{
   text-align: left;
+  font-family: Lato-Black;
   font-size: 13pt;
   color: #4565ad;
   padding: 5px;
@@ -115,6 +116,7 @@ body{
   margin-left: 7px;
 }
 .dropdown-first-headline {
+  font-family: Lato-Black;
   float: left;
   padding: 7px;
   text-align: left;
@@ -126,6 +128,7 @@ body{
   text-align: right;
   padding: 7px;
   font-size: 13pt;
+  font-family: roboto-thin;
   color: white;
 }
 #birth{
