--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -43,7 +43,7 @@
   font-family: Roboto-Thin;
   font-size: 9pt;
   color: #8da6d6;
-  
+
 }
 #link{
   text-decoration: none;
@@ -71,7 +71,7 @@
   width: 150px;
   margin-left: auto;
   margin-right: auto;
-  font-family: Widolte_Regular;
+  font-family: Lato-Black;
   text-decoration: none;
   font-size: 13pt;
   border: 2px solid #001a3a;
