--- a/src/app/style.css
+++ b/src/app/style.css
@@ -25,6 +25,7 @@
   color: white;
 }
 .text-middle-check-night{
+  font-family: Lato-Black;
   text-align: center;
   font-size: 20pt;
   color: #001a3a;
