--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -53,12 +53,16 @@
   height: 40px;
   border-radius: 5px;
   margin-bottom: 3px;
+  font-family: Lato-Black;
+  font-size: 13px;
   margin-left: 10px;
   margin-right: 10px;
   border: 2px solid #d3ddf2;
 }
 .field2{
   height: 40px;
+  font-size: 13px;
+  font-family: roboto-thin;
   border-radius: 5px;
   margin-bottom: 20px;
   margin-left: 10px;
@@ -82,7 +86,6 @@
 
 }
 .center-logo{
-
   margin-left: auto;
   margin-right: auto;
 }
